# claude-resume

./: .gitignore  LICENSE  Makefile  README.md  claude_resume.py  pyproject.toml
claude_resume.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: generate_fake_sessions.py
